--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QL'
 - !lcsh 'Cats -- Folklore'
+- GITenberg
 tableOfContents: The great small cat -- Thursday -- A mine, a miner, and a cat --
   Aïda and Saadi -- Marooned -- Maida -- A memory.
 title: 'The Great Small Cat, and Others: Seven Tales'
